--- a/index.html
+++ b/index.html
@@ -84,6 +84,64 @@
         top: 120px;
         left: 10px;
       }
+      #invLabel {
+        position: relative;
+        display: block;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+      }
+      table#inv {
+        position: relative;
+        top: 0px;
+        left: 0px;
+        border: 2px solid black;
+        border-collapse: collapse;
+      }
+      table#inv td {
+        width: 64px;
+        height: 64px;
+        padding: 0px;
+        border: 2px solid black;
+        background-color: mediumseagreen;
+      }
+      div#fieldDiv {
+        position: absolute;
+        top: 150px;
+        left: 225px
+      }
+      table#field {
+        position: relative;
+        top: 0px;
+        border: 2px solid black;
+        border-collapse: collapse;
+      }
+      table#field td {
+        width: 64px;
+        height: 64px;
+        padding: 0px;
+        border: 2px solid black;
+        background: url("dirt.png") no-repeat;
+      }
+      div#marketDiv {
+        position: absolute;
+        top: 200px;
+        right: 200px;
+      }
+      #marketLabel {
+        position: relative;
+        display: block;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+      }
+      table#market {
+        position: relative;
+        top: 0px;
+        left: 0px;
+        border: 2px solid black;
+        border-collapse: collapse;
+      }
     </style>
   </head>
 </html>
