--- a/index.html
+++ b/index.html
@@ -142,6 +142,57 @@
         border: 2px solid black;
         border-collapse: collapse;
       }
+      table#market td {
+        width: 128px;
+        height: 64px;
+        padding: 0px;
+        border: 2px solid black;
+        background-color: darkgreen;
+        text-align: center;
+        font-weight: bold;
+        font-style: italic;
+      }
+      div#suppliesDiv {
+        position: absolute;
+        top: 120px;
+        right: 10px;
+        text-align: center;
+      }
+      #suppliesLabel {
+        position: relative;
+        display: block;
+        text-align: center;
+        font-weight: bold;
+        font-size: 24px;
+      }
+      table#supplies {
+        position: relative;
+        top: 0px;
+        left: 0px;
+        border: 2px solid black;
+        border-collapse: collapse;
+      }
+      table#supplies td {
+        width: 64px;
+        height: 64px;
+        padding: 0px;
+        border: 2px solid black;
+        background-color: mediumseagreen;
+      }
+      #buyButton {
+        background-color: mediumseagreen;
+        border: none;
+        font-size: 30px;
+        font-weight: bold;
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 5px 10px 5px 10px;
+        border-radius: 6px;
+        border: 1px solid black;
+      }
     </style>
   </head>
 </html>
