--- a/index.html
+++ b/index.html
@@ -193,6 +193,32 @@
         border-radius: 6px;
         border: 1px solid black;
       }
+      .supplyItemDiv {
+        poisition: relative;
+        z-index: auto;
+      }
+      .invItemDiv {
+        position: relative;
+        z-index: auto;
+      }
+      .fieldItemDiv {
+        position: relative;
+        z-index: auto;
+      }
+      .supTooltip {
+        position: absolute;
+        top: 25%;
+        right: 105%;
+        z-index: 1;
+        visibility: hidden;
+        width: 200px;
+        background-color: wheat;
+        color: black;
+        text-align: left;
+        padding: 5px;
+        border-radius: 6px;
+        border: 1px solid black;
+      }
     </style>
   </head>
 </html>
